--- a/.env
+++ b/.env
@@ -14,11 +14,18 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
-###> symfony/framework-bundle ###
+
+
+
 APP_ENV=dev
-APP_SECRET=c4ba8d8ef28fe5d495308802193bd866
+APP_SECRET=ada99af07c41e9c53966d74f4e666d00
 ###< symfony/framework-bundle ###
 
+
+DATABASE_URL="sqlite:///%kernel.project_dir%/db/libreria.db"
+
+
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
@@ -26,5 +33,5 @@ APP_SECRET=c4ba8d8ef28fe5d495308802193bd866
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
