--- a/templates/.gitignore
+++ b/templates/.gitignore
@@ -1,136 +1,40 @@
-<!DOCTYPE html>
+ <script>
+  function cargarContenidoVencidos(id){
+    axios.get('/vencidos/{{ id }}')
+        .then(response => {
+            console.log(response.data);
+        })
+        .catch(error => console.error('Error:', error));
+  }
+ </script>
 
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Lista de productos
-    {% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        
-        {% block stylesheets %} 
-      
-         {% endblock %}
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}   
-            
-        
-        {% endblock %}
-
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
-</html>
-*anterior libros
-{% extends 'base.html.twig' %}
-
-{% block title %}Lista de Libros!{% endblock %}
-
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #42CBF5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-
-    <h1>Lista de nombre!</h1>
-    Nombres de usuarios que no han entregado libro:
-    <br>
-    <h1>{{ cantidad_libros }}</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Titulo</th>
-                <th>Autor</th>
-                <th>Fecha de prestamo</th>  
-                <th>Dias de atraso</th>
-                  <th>Nombre</th>    
-            </tr>
-        </thead>
-        <br>
-        <tbody>
-            {% for prestamo in prestamos_vencidos %}
-                <tr>
-                    <td>{{ prestamo.books.title }}</td>
-                    <td>{{ prestamo.books.author }}</td>
-                    <td>{{ prestamo.checkaoutDate | date('d-m-Y') }}</td>
-                    <td>{{ date('now').diff(prestamo.checkaoutDate )|date("%a") - 7 }}</td> 
-                    <td>{{ prestamo.users.username }}</td>
-                </tr>   
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
-    
-<div>
-   
-{% endblock %}
-///
-{% extends 'base.html.twig' %}
-
-{% block title %}Lista de Libros!{% endblock %}
-
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Lista de Libros! ✅</h1>
-
-    Aqui estan los libros:
-    
-    <table>
-        <thead>
-            <tr>
-                <th>Titulo</th>
-                <th>Autor</th>
-                <th>fecha</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for book in libros %}
-                <tr>
-                    <td>{{ book.title }}</td>
-                    <td>{{ book.author }}</td>
-                    <td>{{ book.publicado | date('d-m-Y') }}</td>
-                </tr>   
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
-{% endblock %}
-//
- #[Route('descripcion', name: 'descripcion_de_usuario')]
-    public function descripcion_completa(ManagerRegistry $doctrine): response 
+     #[Route('vencidos/{{id}}', name: 'app_descripcion')]
+    public function descri(EntityManagerInterface $entityManager, $id): Response
     {
-        $descripcion = $this->descripcion_usuario($doctrine->getManager());
+        $descripcion = $this->descripcion_usuarios($entityManager, $id);
+        return new JsonResponse($descripcion);
+    }
 
-        return $this->render('lista_libros/descripcion.html.twig', [
-            'controller_name' => 'ListaLibrosController',
-        ])
-      
-      
-      
-      
-        $query = $entityManager->createQuery(
-            "SELECT  	
+    private function descripcion_usuarios(EntityManagerInterface $entityManager, $id){
+        $result = $entityManager->createQuery(
+            "SELECT ub.id,
                     u.username,
                     a.street,
                     a.state,
                     b.title,
                     b.author,
                     ub.checkout_date 
-            FROM    App\Entity\addresses a
-            LEFT JOIN   App\Entity\users u
-                WITH    a.user_id =  u.id 
-            LEFT JOIN   App\Entity\books b
-                WITH    u.id  = b.id 
-            LEFT JOIN   App\Entity\UsersBooks ub
-                WITH    b.id = ub.books
+            FROM App\Entity\UsersBooks ub
+            LEFT JOIN App\Entity\Users u 
+                WITH	ub.users = u
+            LEFT JOIN App\Entity\Books b 
+                WITH	ub.books = b
+            LEFT JOIN App\Entity\Addresses a 
+                WITH u.addresses = a
+            WHERE ub.id = :id
         ");
-        return $query->getResult();
+        #print(implode(',', $result->getSingleResult()));
+        $result->setParameter('id', $id);
+        return json_encode($result->getSingleResult());
     }
